--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,23 @@
-// TODO
+.banner {
+  width: calc(100vw - 15px);
+}
+
+.post {
+  padding: 3rem 0;
+  .title {
+    font-size: 3rem;
+    margin: 0 0 2rem;
+  }
+}
+
+.content {
+  h2 {
+    font-size: 2rem;
+    margin: 0 0 1rem;
+  }
+  p {
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    margin: 0 0 1rem;
+  }
+}
