--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,3 +1,17 @@
+.main {
+  background-color: var(--background);
+  min-height: 100vh;
+}
+
+.information {
+  display: flex;
+  gap: 2rem;
+  margin: 1.2rem 0;
+  .icon {
+   margin-right: 0.5rem;
+  }
+}
+
 .container {
   max-width: 1120px;
   margin: 0 auto;
